...
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/library"
        app:layout_constraintBottom_toTopOf="@+id/iv_no_songs"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_no_songs"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_import_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:clickable="true"
        android:contentDescription="@string/import_"
...
